# ytOKshorts

./: .gitignore  LICENSE  README.md  RUN.md  make-short.bat  pyproject.toml  watch-shorts.ps1  ytokshorts.example.toml
moj-satnik/: 3D-MODEL.md  AI-TRYON.md  PRIVACY.md  README.md  co-appka-vie.txt  index.html  manifest.webmanifest  service-worker.js  store-listing.md
moj-satnik/expo-app/: App.js  EAS-BUILD.md  README.md  app.json  package-lock.json  package.json
moj-satnik/expo-app/assets/: app-html.js
moj-satnik/expo-app/scripts/: build-html.mjs
moj-satnik/ios-app/: .gitignore  APP-STORE.md  PRIVACY.md  README.md  capacitor.config.json  package-lock.json  package.json  store-listing.md
moj-satnik/ios-app/scripts/: sync-web.mjs
moj-satnik/store/screenshots/: README.md
moj-satnik/tools/: make-icons.py
moj-satnik/tryon-proxy/: README.md  worker.js  wrangler.toml
src/ytokshorts/: __init__.py  __main__.py  captions.py  cli.py  clip.py  config.py  download.py  errors.py  external.py  highlights.py  media.py  pipeline.py  upload.py
src/ytokshorts/news/: __init__.py  avatar.py  background.py  compose.py  country.py  feeds.py  metadata.py  pipeline.py  portrait.py  script.py  state.py  tts.py
tests/: conftest.py  test_avatar.py  test_captions.py  test_cli.py  test_clip.py  test_config.py  test_highlights.py  test_media_and_pipeline.py  test_metadata.py  test_news.py  test_state.py  test_upload.py
